Remove: invalid aria attribute, Fix: calculator position

--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
               aria-controls="calculator-result"
             />
           </div>
-          <fieldset class="calculator__form__field-container" aria-con>
+          <fieldset class="calculator__form__field-container">
             <legend id="tip-label" class="calculator__form__label">
               Select a tip %
             </legend>
