Remove: form action attribute

--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
 
     <main>
       <div class="calculator">
-        <form id="calculator-form" class="calculator__form" action="">
+        <form id="calculator-form" class="calculator__form">
           <div class="calculator__form__field-container">
             <div class="calculator__form__label-container">
               <label class="calculator__form__label" for="bill">Bill</label>
